--- a/style.css
+++ b/style.css
@@ -134,3 +134,27 @@ container img {
     background-color: #262525;
     color: #ffffff;
 }
+
+section {
+    background-color: #262525;
+    font-family: Play;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.gallery1 {
+    margin: 15px;
+ }
+  
+div.gallery1 img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+    color: #ffffff;
+}
+
