--- a/projectstyle.css
+++ b/projectstyle.css
@@ -56,10 +56,11 @@ header {
     margin: 0 12%;
     padding: 25px;
     font-family: Play;
-    padding-bottom: 45px;
+    padding-bottom: 15px;
     border-bottom: ridge;
     border-width: 6px;
     border-color: #292828;
+    display: flex;
 }
 
 h1 {
@@ -71,7 +72,8 @@ h1 {
 
 header nav {
     background-color: #808080;
-    margin-left: 2%;
+    margin-left: 25%;
+    margin-top: 10px;
 }
 
 header nav a {
@@ -91,63 +93,26 @@ header nav a:hover{
     opacity: 0.25;
 }
 
-div {
-    background-color: #262525;
-    margin-left: 12%;
-    margin-right: 12%;
-}
-
-container {
-    display: inline-flex;
-    margin: 3% 12%;
-    background-color: #262525;
-}
-
-container img {
-    width: 35%;
-    height: auto;
-    margin-left: 1%; 
-    border: solid;
-    border-width: 4px;
-    border-color: #994192;
-}
-
-#info {
-    margin-left: 8%;
-    margin-top: 10%;
+#title{
+    text-align: center;
+    margin: 0 12%;
     font-family: Play;
 }
 
-#info h2 {
-    background-color: #262525;
+#title h2{
+    background-color: #292828;
     color: #d982c2;
+    font-size: 40px;
+}
+
+#title p{
+    background-color: #292828;
+    color: #ffffff;
     font-size: 30px;
-    margin-bottom: 15px;
-}
-
-#info a {
-    background-color: #994192;
-    font-size: 20px;
-    text-decoration: none;
-    color: #ffffff;
-    border: solid;
-    border-width: 1.5px;
-    border-color: #000000;  
-    padding: 4px;
-}
-
-#info a:hover{
-    opacity: 0.25;
-}
-
-#info p {
-    margin-top: 20px;
-    background-color: #262525;
-    color: #ffffff;
 }
 
 section {
-    background-color: #262525;
+    background-color: #292828;
     font-family: Play;
     display: flex;
     justify-content: center;
@@ -155,6 +120,13 @@ section {
     border-bottom: ridge;
     border-width: 9px;
     border-color: #292828;
+}
+
+#gal1{
+    margin: 0 12%;
+    background-color: #292828;
+    display: flex;
+    flex-wrap: wrap-reverse;
 }
 
 .gallery1 {
@@ -167,7 +139,7 @@ div.gallery1 img {
 }
 
 div.gallery1 a{
-    background-color: #262525;
+    background-color: #292828;
 }
 
 div.gallery1 a:hover{
@@ -178,6 +150,7 @@ div.desc {
     padding: 15px;
     text-align: center;
     color: #ffffff;
+    background-color: #292828;
 }
 
 footer {
