--- a/contactstyle.css
+++ b/contactstyle.css
@@ -91,60 +91,57 @@ header nav a:hover{
     opacity: 0.25;
 }
 
-div{
+div {
+    margin: 0 12%;
+    padding: 3%;
+    font-family: Play;
+    background-color: #292828;
+}
+
+.lead p {
+    margin: 0 25%;
+    margin-bottom: 0;
+    background-color: #292828;
+    color: #ffffff;
+}
+
+#main form {
     background-color: #292828;
     font-family: Play;
+    margin: 0 40%;
 }
 
-#main{
-    margin: 0 12%;
-    display: inline-flex;
-    padding: 30px;
+#main form .label {
+    background-color: #292828;
+    color: #ffffff;
 }
 
-#main img{
+#main form .name {
+    margin-bottom: 7px;
+    border-color: #ffd6ef;
+    border-radius: 5%;
+    background-color: #ebc5dc;
+    font-family: Play;
+    color: #292828;
+}
+
+#main form .text {
+    margin-bottom: 7px;
+    border-color: #ffd6ef;
+    border-radius: 1%;
+    background-color: #ebc5dc;
+    font-family: Play;
+    color: #292828;
     width: 300px;
-    height: auto;
-    margin-left: 5%; 
-    border: solid;
-    border-width: 4px;
-    border-color: #994192;
+    height: 200px;
 }
 
-#main h2{
-    background-color: #292828;
-    color: #d982c2;
-    font-size: 45px;
+#button {
     text-align: center;
-    margin-bottom: 20px;
-}
-
-#main p{
-    background-color: #292828;
-    color: #ffffff;
-    font-size: 20px;
-    margin-left: 20px;
-    margin-bottom: 15px;
-}
-
-#secondary{
-    margin: 0 12%;
-    border-bottom: ridge;
-    border-width: 6px;
-    border-color: #292828;
-}
-
-#secondary p{
-    background-color: #292828;
-    color: #ffffff;
-    font-size: 20px;
-    margin: 0 15px;
-    margin-bottom: 15px;
-}
-
-#secondary .final{
-    margin-bottom: 0;
-    padding-bottom: 25px;
+    margin: 0 10%;
+    padding: 5px;
+    border: outset;
+    background-color: #e8d9de;
 }
 
 footer {
@@ -153,9 +150,12 @@ footer {
     padding: 3%;
     padding-bottom: 15px;
     text-align: center;
+    border-top: ridge;
+    border-width: 6px;
+    border-color: #292828;
 }
 
-footer p{
+footer p {
     text-align: center;
     background-color: #808080;
     font-family: Play;
@@ -164,7 +164,7 @@ footer p{
     margin-bottom: 30px;
 }
 
-footer .contact{
+footer .contact {
     background-color: #994192;
     font-size: 20px;
     text-decoration: none;
@@ -176,11 +176,11 @@ footer .contact{
     padding: 7px;
 }
 
-footer .contact:hover{
+footer .contact:hover {
     opacity: 0.25;
 }
 
-footer nav{
+footer nav {
     background-color: #808080;
     display: flex;
     flex-direction: row-reverse;
@@ -190,13 +190,13 @@ footer nav a{
     background-color: #808080;
 }
 
-footer nav a img{
+footer nav a img {
     width: 30px;
     height: auto;
     margin-top: 40px;
     margin-left: 10px;
 }
 
-footer nav a:hover{
+footer nav a:hover {
     opacity: 0.25;
 }
