--- a/style.css
+++ b/style.css
@@ -265,3 +265,51 @@ footer nav a img{
 footer nav a:hover{
     opacity: 0.25;
 }
+
+@media (max-width: 800px) {
+    header {
+      background-color: #262525;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      border: none;
+    }
+    
+    h1 {
+      background-color: #262525;
+    }
+    
+    header nav {
+      display: flex;
+      flex-direction: column;
+      background-color: #262525;
+    }
+    
+    header nav a {
+      margin: 1.5rem 0;
+      text-align: center;
+    
+    }
+    
+    container {
+      display: flex;
+      margin-top: 0;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 2.5rem;
+    }
+    
+    #info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    
+    #info p {
+      margin-left: 2.5rem;
+    }
+    
+    footer nav a{
+      display: none;
+    } 
+  }
