--- a/style.css
+++ b/style.css
@@ -266,6 +266,12 @@ footer nav a:hover{
     opacity: 0.25;
 }
 
+@media (max-width: 906px) {
+    footer nav a {
+        display: none;
+    }
+}
+
 @media (max-width: 800px) {
     header {
       background-color: #262525;
@@ -309,8 +315,88 @@ footer nav a:hover{
       margin-left: 2.5rem;
     }
 
-    footer nav a{
+    footer nav a {
       display: none;
     } 
-
   }
+
+@media (max-width: 500px) {
+    header {
+        background-color: #262525;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        border: none;
+    }
+      
+    h1 {
+        background-color: #262525;
+        font-size: 3rem;
+    }
+      
+    header nav {
+        display: flex;
+        flex-direction: column;
+        background-color: #262525;
+    }
+      
+    header nav a {
+        margin: 1.5rem 0;
+        text-align: center;
+        margin-bottom: 0;
+    }
+      
+    #intro {
+        display: flex;
+        margin-top: 0;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+
+    #intro img {
+        width: 45%;
+    }
+
+    #intro a {
+        display: none;
+    }
+      
+    #info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0;
+    }
+
+    #info h2 {
+        display: none;
+    }
+      
+    #info p {
+        margin-left: 2.5rem;
+    }
+
+    #gal1 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #gal1 .gallery1 {
+        max-width: 30%;
+    }
+
+    #gal2 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #gal2 .gallery2 {
+        max-width: 30%;
+    }
+  
+    footer nav a {
+        display: none;
+    } 
+
+}
