--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ footer {
     text-align: center;
 }
 
-footer p{
+footer h3{
     text-align: center;
     background-color: #808080;
     font-family: Play;
