--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -50,23 +50,27 @@ table {
     background-color: #e3e1df;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 header {
     background-color: #808080;
     color: #ffffff;
     margin: 0 12%;
-    padding: 25px;
+    padding: 2.5rem;
     font-family: Play;
-    padding-bottom: 45px;
+    padding-bottom: 4.5rem;
     border-bottom: ridge;
-    border-width: 6px;
+    border-width: .6rem;
     border-color: #292828;
 }
 
 h1 {
     font-family: Montserrat Subrayada;
     background-color: #808080;
-    font-size: 45px;
-    margin: 5px;
+    font-size: 4.5rem;
+    margin: .5rem;
 }
 
 header nav {
@@ -76,15 +80,15 @@ header nav {
 
 header nav a {
     background-color: #994192;
-    font-size: 20px;
+    font-size: 2rem;
     text-decoration: none;
     color: #ffffff;
     margin: 0;
     border: solid;
-    border-width: 1px;
+    border-width: .1rem;
     border-color: #000000;  
     float: left;
-    padding: 7px;
+    padding: .7rem;
 }
 
 header nav a:hover{
@@ -99,81 +103,82 @@ div{
 #main{
     margin: 0 12%;
     display: inline-flex;
-    padding: 30px;
+    padding: 3rem;
 }
 
 #main img{
-    width: 300px;
+    width: 25rem;
     height: auto;
     margin-left: 5%; 
     border: solid;
-    border-width: 4px;
+    border-width: .4rem;
     border-color: #994192;
 }
 
 #main h2{
     background-color: #292828;
     color: #d982c2;
-    font-size: 45px;
+    font-size: 4.5rem;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
 }
 
 #main p{
     background-color: #292828;
     color: #ffffff;
-    font-size: 20px;
-    margin-left: 20px;
-    margin-bottom: 15px;
+    font-size: 2rem;
+    margin-left: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 #secondary{
     margin: 0 12%;
     border-bottom: ridge;
-    border-width: 6px;
+    border-width: .6rem;
     border-color: #292828;
 }
 
 #secondary p{
     background-color: #292828;
     color: #ffffff;
-    font-size: 20px;
-    margin: 0 15px;
-    margin-bottom: 15px;
+    font-size: 2rem;
+    margin: 0 10rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 #secondary .final{
     margin-bottom: 0;
-    padding-bottom: 25px;
+    padding-bottom: 2.5rem;
 }
 
 footer {
     margin: 0 12%;
     background-color: #808080;
     padding: 3%;
-    padding-bottom: 15px;
+    padding-bottom: 1.5rem;
     text-align: center;
 }
 
-footer p{
+footer h3{
     text-align: center;
     background-color: #808080;
     font-family: Play;
     color: #ffffff;
-    font-size: 30px;
-    margin-bottom: 30px;
+    font-size: 3rem;
+    margin-bottom: 3rem;
 }
 
 footer .contact{
     background-color: #994192;
-    font-size: 20px;
+    font-size: 2rem;
     text-decoration: none;
     color: #ffffff;
     margin: 0;
     border: solid;
-    border-width: 2px;
+    border-width: .2rem;
     border-color: #000000;  
-    padding: 7px;
+    padding: .7rem;
 }
 
 footer .contact:hover{
@@ -191,10 +196,10 @@ footer nav a{
 }
 
 footer nav a img{
-    width: 30px;
+    width: 3rem;
     height: auto;
-    margin-top: 40px;
-    margin-left: 10px;
+    margin-top: 4rem;
+    margin-left: 1rem;
 }
 
 footer nav a:hover{
