added media queries for 800px and 500px

--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -63,7 +63,7 @@ header {
     padding-bottom: 4.5rem;
     border-bottom: ridge;
     border-width: .6rem;
-    border-color: #292828;
+    border-color: #262525;
 }
 
 h1 {
@@ -96,18 +96,18 @@ header nav a:hover{
 }
 
 div{
-    background-color: #292828;
+    background-color: #262525;
     font-family: Play;
 }
 
 #main{
     margin: 0 12%;
-    display: inline-flex;
+    display: flex;
     padding: 3rem;
 }
 
 #main img{
-    width: 25rem;
+    max-width: 20%;
     height: auto;
     margin-left: 5%; 
     border: solid;
@@ -116,7 +116,7 @@ div{
 }
 
 #main h2{
-    background-color: #292828;
+    background-color: #262525;
     color: #d982c2;
     font-size: 4.5rem;
     text-align: center;
@@ -124,7 +124,7 @@ div{
 }
 
 #main p{
-    background-color: #292828;
+    background-color: #262525;
     color: #ffffff;
     font-size: 2rem;
     margin-left: 2rem;
@@ -135,14 +135,14 @@ div{
     margin: 0 12%;
     border-bottom: ridge;
     border-width: .6rem;
-    border-color: #292828;
+    border-color: #262525;
 }
 
 #secondary p{
-    background-color: #292828;
+    background-color: #262525;
     color: #ffffff;
     font-size: 2rem;
-    margin: 0 10rem;
+    margin: 0 9rem;
     margin-right: 1.5rem;
     margin-bottom: 1.5rem;
 }
@@ -172,6 +172,7 @@ footer h3{
 footer .contact{
     background-color: #994192;
     font-size: 2rem;
+    font-family: Play;
     text-decoration: none;
     color: #ffffff;
     margin: 0;
@@ -204,4 +205,87 @@ footer nav a img{
 
 footer nav a:hover{
     opacity: 0.25;
+}
+
+@media (max-width: 800px) {
+    header {
+        background-color: #262525;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        border: none;
+    }
+
+    h1 {
+        background-color: #262525;
+    }
+
+    header nav {
+        display: flex;
+        flex-direction: column;
+        background-color: #262525;
+    }
+
+    header nav a {
+        margin: 1.5rem 0;
+        text-align: center;
+    }
+
+    #main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #main img {
+        margin-bottom: 2rem;
+    }
+
+    #about_info h2 {
+        font-size: 3.5rem;
+    }
+
+    #secondary {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+    }
+
+    #secondary p {
+        margin-left: 5rem;
+    }
+
+    footer nav a img {
+        display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    header {
+        background-color: #262525;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        border: none;
+    }
+      
+    h1 {
+        background-color: #262525;
+        font-size: 3rem;
+    }
+      
+    header nav {
+        display: flex;
+        flex-direction: column;
+        background-color: #262525;
+    }
+      
+    header nav a {
+        margin: 1.5rem 0;
+        text-align: center;
+        margin-bottom: 0;
+    }
+
+    #main img {
+        display: none;
+    }
 }
